--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="avatar">
           <img class="img-circle" src="./img/mypic.jpg" width="200">
         </div>
-        <h3>I'm <strong>Kaitlin Ou</strong>, a Student.</h3>
-        <h3>I love all things science and sports.</h3>
+        <h3>I'm <strong>Kaitlin Ou</strong>, a Student at UT Austin.</h3>
+        <h3>I love all things friends/family, food, sports, and Jesus</h3>
         <h3>Have a look at some of my <a href="./projects/"> projects</a>.</h3>
         <h3>For more, check out my academic &amp; professional <a href="./resume/">resume</a>.</h3>
         <h3>To get in touch, contact me via email <a href="mailto:kaitlin.ou@utexas.edu">here</a>.</h3>
