--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section id="about">
         <div class="container">
         <div class="avatar">
-          <img class="img-circle" src="./img/mypic.jpg" width="200">
+          <img class="img-circle" src="./img/mypic.JPG" width="200">
         </div>
         <h3>I'm <strong>Kaitlin Ou</strong>, a Student at UT Austin.</h3>
         <h3>I love all things friends/family, food, sports, and Jesus</h3>
